# becket

./: .becketignore  .gitattributes  .gitignore  ARCHITECTURE.md  BACKLOG.md  CHANGELOG.md  CODEMAP.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PROGRESS.md  README.md  dist-workspace.toml  netlify.toml
.githooks/: pre-commit
.github/workflows/: ci.yml  release.yml
crates/becket-cli/: Cargo.toml
crates/becket-cli/src/: commands.rs  main.rs  watch.rs
crates/becket-core/: Cargo.toml
crates/becket-core/src/: build.rs  embed.rs  error.rs  extract.rs  language.rs  lib.rs  walker.rs
crates/becket-core/src/domain/: mod.rs
crates/becket-core/src/flow/: mod.rs
crates/becket-core/src/graph/: mod.rs
crates/becket-core/src/parse/: http_routes.rs  registry.rs  service_contracts.rs  tree_sitter.rs
crates/becket-core/src/wiki/: compiler.rs  fingerprint.rs  lint.rs  store.rs  util.rs
crates/becket-core/src/workspace/: linker.rs  mod.rs
crates/becket-core/tests/: bench_budget.rs  fixtures.rs
crates/becket-embed/: Cargo.toml
crates/becket-embed/src/: embedder.rs  model.rs  onnx.rs  text.rs
crates/becket-mcp/: Cargo.toml
crates/becket-mcp/src/: main.rs  sampling.rs  server.rs
crates/becket-query/: Cargo.toml
crates/becket-query/src/: assemble.rs  engine.rs  error.rs  lib.rs  types.rs
crates/becket-schema/: Cargo.toml
crates/becket-schema/src/: artifacts.rs  json_schema.rs  lib.rs  version.rs  wiki.rs  workspace.rs
crates/becket-schema/tests/: schema_validation.rs
crates/becket-store/: Cargo.toml
crates/becket-store/src/: artifacts.rs  db.rs  lib.rs  paths.rs
crates/repoctx-cli/: Cargo.toml
crates/repoctx-cli/src/: commands.rs  main.rs  watch.rs
crates/repoctx-core/: Cargo.toml
crates/repoctx-core/src/: build.rs  embed.rs  extract.rs  ids.rs  language.rs  lib.rs  walker.rs
crates/repoctx-core/src/flow/: mod.rs
crates/repoctx-core/src/graph/: mod.rs
crates/repoctx-core/src/parse/: http_clients.rs  mod.rs  registry.rs  tree_sitter.rs
crates/repoctx-core/src/wiki/: compiler.rs  lint.rs  mod.rs  store.rs  util.rs
crates/repoctx-core/src/workspace/: linker.rs  mod.rs
crates/repoctx-core/tests/: bench_budget.rs  fixtures.rs
crates/repoctx-embed/: Cargo.toml
crates/repoctx-embed/src/: embedder.rs  lib.rs  onnx.rs  text.rs
crates/repoctx-mcp/: Cargo.toml
crates/repoctx-mcp/src/: sampling.rs  server.rs
crates/repoctx-query/: Cargo.toml
crates/repoctx-query/src/: assemble.rs  engine.rs  types.rs
crates/repoctx-schema/: Cargo.toml
crates/repoctx-schema/src/: json_schema.rs  lib.rs  workspace.rs
crates/repoctx-schema/tests/: schema_validation.rs
crates/repoctx-store/: Cargo.toml
crates/repoctx-store/src/: db.rs  lib.rs  vec_ext.rs
demo/: .gitignore  Cargo.toml  README.md
demo/api/: webhook.py
demo/src/services/: catalog.rs  mod.rs  payments.rs
docs/: windows.md
docs/adr/: 0001-rust-first-stack.md  0002-local-first-sqlite.md  0003-mcp-sampling-only-llm.md  0004-cargo-dist-distribution.md  0005-deterministic-artifact-ids.md  0006-grounded-knowledge-wiki.md  0007-no-rlm-in-core.md  README.md
packaging/: README.md
schemas/: cross_repo.schema.json  wiki_stale.schema.json
scripts/: setup-git-hooks.sh
tests/fixtures/bench-small/src/: main.rs
tests/fixtures/bench-small/src/services/: billing.rs  inventory.rs  notifications.rs  orders.rs  shipping.rs  users.rs
tests/fixtures/http-routes/src/: Api.java  app.py  app.ts
tests/fixtures/workspace/: becket.workspace.toml
tests/fixtures/workspace/gateway/src/: client.ts
website/: docs.html  index.html
website/css/: styles.css
website/js/: i18n.js  main.js
