[package]
name = "becket-cli"
description = "CLI for Becket — local codebase intelligence layer"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true

[[bin]]
name = "becket"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
becket-core = { workspace = true }
becket-query = { workspace = true }
becket-schema = { workspace = true }
becket-store = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = "0.9.6"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
notify = "8"
notify-debouncer-mini = "0.7"

[package.metadata.dist]
dist = true
npm-package = "becket"
formula = "becket"
