[package]
name = "becket-query"
description = "Query engine for impact, flow, context, and dependency lookups"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = { workspace = true }
becket-embed = { workspace = true }
becket-schema = { workspace = true }
becket-store = { workspace = true }
becket-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
becket-core = { workspace = true }
tempfile = "3"
