[package]
name = "becket-schema"
description = "Versioned JSON artifact schemas and shared types for Becket"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
jsonschema = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }
thiserror = { workspace = true }
toml = "0.9.6"

[dev-dependencies]
serde_json = { workspace = true }
