[package]
name = "becket-store"
description = "SQLite index and JSON artifact persistence for Becket"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = { workspace = true }
becket-schema = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlite-vec = "0.1"
thiserror = { workspace = true }
tracing = { workspace = true }
zerocopy = { version = "0.8", features = ["derive"] }

[dev-dependencies]
tempfile = "3"
